--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,9 @@ build/Release
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 /node_modules/*
+
+# Don't push the zipped builds
+builds/
+
+# Don't push the Node-Webkit binaries
+cache/
